# TrackingMicroscopySystem

./: CMakeLists.txt  README.md
cmake/: CompilerConfig.cmake  InstallConfig.cmake  LibraryConfig.cmake
cmake/tools/: FindNIDAQ.cmake  FindOASIS.cmake  FindVLD.cmake  FlagUtilities.cmake  PrecompiledHeaderFiles.cmake  SeparateFlags.cmake  SetCacheAdvanced.cmake  SourceFileUtilities.cmake
config/: CMakeLists.txt  tracker.ini
data/: CMakeLists.txt
gauge/: CMakeLists.txt  LICENSE.txt  qtsvgdialgauge.cpp  qtsvgdialgauge.h  qtsvgpixmapcache.cpp  qtsvgpixmapcache.h  tachometer_svgdialgauge.qrc
loki/: CMakeLists.txt  ScopeGuard.h  TypeManip.h  TypeTraits.h  changes_tracker.txt
src/: CMakeLists.txt
src/gauge/: CMakeLists.txt
src/loki/: CMakeLists.txt  ScopeGuard.h  TypeManip.h  TypeTraits.h
src/tracker/: AutoStretch.cc  AutoStretch.h  CMakeLists.txt  Camera.cc  Camera.h  ComPorts.ui  Controller.cc  Controller.h  CorrelationImage.cc  CorrelationImage.h  Correlator.cc  Correlator.h  CurveFitter.cc  CurveFitter.h  Dac.h  DraggableLabel.cc  DraggableLabel.h  Exception.cc  Exception.h  FocusTracker.cc  FocusTracker.h  Lamp.cc  Lamp.h  LinearMotor.cc  LinearMotor.h  Logger.cc  Logger.h  Main.cc  MainWindow.cc  MainWindow.h  MainWindow.ui  MessagesHandler.cc  MessagesHandler.h  Microscope.cc  Microscope.h  Microscope_old.cc  Microscope_old.h  MyGraphicsView.cc  MyGraphicsView.h  PathConfig.cc  (+25 more)
src/tracker/QCustomPlot/: qcustomplot.cpp
src/tracker/dummy/: DummyCamera.cc  DummyCamera.h  DummyDac.cc  DummyDac.h  DummyMicroscope.cc  DummyMicroscope.h  DummyStage.cc  DummyStage.h
src/tracker/lmfit/: lmfit.c  lmfit.h
src/tracker/windows/: WindowsCamera.cc  WindowsCamera.h  WindowsDac.cc  WindowsDac.h  WindowsStage.cc  WindowsStage.h
src/wxctb/: CMakeLists.txt  README  fifo.cpp  gpib.cpp  gpib.h  iobase.cpp  iobase.h  serportx.h
src/wxctb/linux/: serport.cpp  serport.h  timer.cpp
src/wxctb/win32/: serport.cpp
